# FallbackRabbit

./: .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NEXT-STEPS.md  README.md  RESEARCH.md  SECURITY.md  docker-compose.yml  landing.html  mkdocs.yml  pyproject.toml  wrangler.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
deploy/: README.md
deploy/docs/: 404.html  index.html  sitemap.xml
deploy/docs/api/: index.html
deploy/docs/auth/: index.html
deploy/docs/chains/: index.html
deploy/docs/changelog/: index.html
docs/: api.md  auth.md  chains.md  changelog.md  cli.md  config-reference.md  dashboard.md  export.md  index.md  installation.md  providers.md  quickstart.md  ratelimit.md  rules.md  simulation.md  storage.md  templates.md  websocket.md
examples/: api_usage.py  basic_chain.py  export_chain.py  load_from_yaml.py  outage_simulation.py
fallbackrabbit/: __init__.py  auth.py  chain_builder.py  chain_schema.py  cli.py  config.py  config_export.py  dashboard.html  dashboard.py  models.py  providers.py  ratelimit.py  rich_display.py  server.py  simulator.py  storage.py  template_export.py  websocket.py
schemas/: example_chain.yaml  example_outage.yaml
tests/: __init__.py  test_auth.py  test_chain_builder.py  test_chain_schema.py  test_cli.py  test_config_export.py  test_dashboard.py  test_export_formats.py  test_integration.py  test_models.py  test_providers.py  test_ratelimit.py  test_rich_display.py  test_server.py  test_simulator.py  test_status_code_and_timing.py  test_storage.py  test_template_export.py  test_websocket.py
website/: README.md  _redirects  index.html
(+14 files in other folders)
